# CSV-Mapping

./: .gitignore  AI_OPTIMIZATION.md  Dockerfile  README.md  backend_server.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  simple_backend.py
backend/: Dockerfile  backend_server.py  migrate_db.py  pyproject.toml  simple_backend.py
backend/app/: config.py  db.py  main.py  models.py  openai_client.py  schemas.py
backend/app/match_engine/: __init__.py  engine.py  normalize.py  scoring.py  thresholds.py
backend/app/routers/: ai.py  approve.py  databases.py  export.py  imports.py  match.py  pdf_imports.py  project_databases.py  projects.py  projects_list.py  rejected_products.py  suppliers.py  url_enhancement.py
backend/app/services/: ai_queue_manager.py  ai_queue_processor.py  files.py  mapping.py  parallel_pdf_processor.py  parallel_url_processor.py  pdf_processor.py
backend/app/utils/: logging.py
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  railway.json  start.sh  tsconfig.tsbuildinfo
frontend/public/images/: README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: AIQueueStatus.tsx  BulkActionBar.tsx  CSVEditor.tsx  CountryFlag.tsx  DataGrid.tsx  DetailedProgressBar.tsx  MatchResults.tsx  PDFProcessingProgress.tsx  Toast.tsx  URLEnhancementStatus.tsx  UnifiedAIStatus.tsx  UploadArea.tsx
frontend/src/contexts/: AIContext.tsx  ToastContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AIDeep.tsx  Databases.tsx  Export.tsx  Import.tsx  (+5 more)
tests/: test_placeholder.txt
