[project]
name = "csv-match-assistant-backend"
version = "0.1.0"
description = "Backend for CSV Match Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "rapidfuzz>=3.9",
    "Unidecode>=1.3",
    "python-multipart>=0.0.9",
    "openai>=1.40",
    "psycopg2-binary>=2.9",
    "PyMuPDF>=1.23.8",
    "pdfplumber>=0.10.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["backend/app"]
